# stilas-az

./: .gitignore  BUILD.bazel  MODULE.bazel  Makefile  PROJECT  README.md  env.template  go.mod  go.sum  renovate.json
.github/workflows/: build.yaml  vulncheck.yaml
api/v1alpha1/: BUILD.bazel  api_converters.go  api_enums.go  api_types.go  apiversion_types.go  backend_types.go  groupversion_info.go  productapi_types.go  productapiversion_types.go  zz_generated.deepcopy.go
cmd/: BUILD.bazel  main.go
config/crd/: kustomization.yaml
config/crd/bases/: apim.azure.stilas.418.cloud_apis.yaml  apim.azure.stilas.418.cloud_apiversions.yaml  apim.azure.stilas.418.cloud_backends.yaml  apim.azure.stilas.418.cloud_productapis.yaml  apim.azure.stilas.418.cloud_productapiversions.yaml
config/default/: kustomization.yaml  metrics_service.yaml
config/manager/: manager.yaml
config/network-policy/: allow-metrics-traffic.yaml
config/prometheus/: monitor.yaml
config/rbac/: api_editor_role.yaml  api_viewer_role.yaml  apiversion_editor_role.yaml  apiversion_viewer_role.yaml  backend_editor_role.yaml  backend_viewer_role.yaml  kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  productapi_editor_role.yaml  productapi_viewer_role.yaml  productapiversion_editor_role.yaml  productapiversion_viewer_role.yaml  role.yaml  role_binding.yaml  service_account.yaml
config/samples/: apim_v1alpha1_api.yaml  apim_v1alpha1_apiversion.yaml  apim_v1alpha1_backend.yaml  apim_v1alpha1_productapi.yaml  apim_v1alpha1_productapiversion.yaml  kustomization.yaml
hack/: boilerplate.go.txt
internal/azure/: BUILD.bazel  apim_client.go  azure-lro.go
internal/controller/: BUILD.bazel  api_controller.go  api_controller_test.go  apiversion_controller.go  apiversion_controller_test.go  backend_controller.go  backend_controller_test.go  productapi_controller.go  productapi_controller_test.go  productapiversion_controller.go  productapiversion_controller_test.go  suite_test.go
internal/utils/: BUILD.bazel  sha.go
test/e2e/: BUILD.bazel  e2e_suite_test.go  e2e_test.go
test/utils/: BUILD.bazel  utils.go
