load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "controller",
    srcs = [
        "api_controller.go",
        "apiversion_controller.go",
    ],
    importpath = "github.com/tjololo/stilas-az/internal/controller",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/v1alpha1",
        "//internal/azure",
        "//internal/utils",
        "@com_github_azure_azure_sdk_for_go_sdk_resourcemanager_apimanagement_armapimanagement_v2//:armapimanagement",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/controller/controllerutil",
        "@io_k8s_sigs_controller_runtime//pkg/log",
    ],
)

go_test(
    name = "controller_test",
    srcs = [
        "api_controller_test.go",
        "apiversion_controller_test.go",
        "suite_test.go",
    ],
    embed = [":controller"],
    deps = [
        "//api/v1alpha1",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/types",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_client_go//rest",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/envtest",
        "@io_k8s_sigs_controller_runtime//pkg/log",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile",
    ],
)
